objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Attended__c</fullName>
        <description>Count of number who attended a tour</description>
        <label>Attended</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Attended</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Did_not_attend__c</fullName>
        <description>count those that did not attend a tour</description>
        <label>Did not attend</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Did not attend</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Limit_Level__c</fullName>
        <formula>IMAGE(
 IF( Remaining_Seats__c = 0, &quot;/img/samples/light_red.gif&quot;,  
IF( Maximum_Limit__c =  Remaining_Seats__c , &quot;/img/samples/light_green.gif&quot;, &quot;/img/samples/light_yellow.gif&quot;) ) ,
&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Limit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Limit__c</fullName>
        <description>When type School Tour is selected it should display 15</description>
        <label>Maximum Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_People_Attending__c</fullName>
        <label>No. of People Attending</label>
        <summarizedField>CampaignMember.No_of_People_Attending__c</summarizedField>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Will Attend</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Remaining_Seats__c</fullName>
        <formula>Maximum_Limit__c -  No_of_People_Attending__c</formula>
        <label>Remaining Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Status__c</fullName>
        <formula>IMAGE(IF (NumberOfResponses   &gt;= 30, &quot;/img/samples/flag_red.gif&quot;, &quot;/img/samples/flag_green.gif&quot;), &quot;Response Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stake_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stake Holder</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Member__c</fullName>
        <formula>NumberOfContacts  +  (  NumberOfLeads  -   NumberOfConvertedLeads  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Member</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Campaign_Members__c</fullName>
        <label>Total Number of Campaign Members</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Attended, Did not attend, Opt Out, Responded, Sent, Will Attend</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tour_School_Leaders__c</fullName>
        <description>enter the names and year group of the nominated school leaders on the tour</description>
        <inlineHelpText>enter the names and year group of the nominated school leaders on the tour</inlineHelpText>
        <label>Tour School Leaders</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Speaker__c</fullName>
        <description>Name of speaker, i.e. Dr Collier, David Smith, Richard Ford</description>
        <label>Tour Speaker</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>Tour_Speaker__c</columns>
        <columns>Tour_School_Leaders__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns2</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>Remaining_Seats__c</columns>
        <columns>Maximum_Limit__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All inactive Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Tour_School_Leaders__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>